# blanco-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile-bot  Dockerfile-lavalink  LICENSE  Makefile  README.md  dev_server.py  docker-compose.debug.yml  docker-compose.yml  lavalink.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  tailwind.config.js  webserver-dev.py
.github/workflows/: build-and-push.yml  build-main.yml  build-on-main-pr.yml  build-on-main-push.yml  build-pr.yml  build.yml  docker-image.yml  pull-request.yml  release.yml  staging.yml
bot/: dev_server.py  main.py
bot/api/: extension.py  main.py
bot/cogs/: __init__.py  bumps.py  debug.py
bot/database/: __init__.py  redis.py
bot/dataclass/: config.py
bot/models/: bump.py  config.py  custom_embed.py  queue_item.py
bot/server/: __init__.py  main.py  routes.py
bot/utils/: blanco.py  config.py  embeds.py  exceptions.py  fuzzy.py  logger.py  musicbrainz.py  paginator.py  player_checks.py  scrobbler.py  spotify_client.py  spotify_private.py
bot/views/: now_playing.py  paginator.py  spotify_dropdown.py
cogs/: __init__.py  bumps.py  debug.py  player.py  player_listeners.py
cogs/player/: __init__.py  jockey.py  jockey_helpers.py  lavalink_client.py  queue.py  scrobbler.py  (+1 more)
database/: __init__.py  redis.py
dataclass/: bump.py  config.py  custom_embed.py  lavalink_result.py  oauth.py  queue_item.py  spotify.py  spotify_track.py  youtube.py
server/: __init__.py  main.py  routes.py  views.py
utils/: blanco.py  config.py  constants.py  database.py  embeds.py  exceptions.py  fuzzy.py  jockey.py  jockey_helpers.py  lavalink.py  lavalink_bot.py  lavalink_client.py  lavalink_helpers.py  lavalink_voice.py  logger.py  musicbrainz.py  paginator.py  player_checks.py  scrobbler.py  spotify_client.py  spotify_private.py  string_util.py  time.py  url.py  url_check.py  youtube_client.py
views/: now_playing.py  paginator.py  spotify_dropdown.py
(+81 files in other folders)
